# python-ci-templates

./: README.md  mypy.ini  pyproject.toml  ruff.toml
